Cleanup and add NOTREACHED to supplementaryView method.

Fixes an error reported by returning nil as a supplementary view must be
returned from this method.

BUG=648970

Review-Url: https://codereview.chromium.org/2663323002
Cr-Commit-Position: refs/heads/master@{#448255}

Former-commit-id: 7348c2e83d2be803c1142f0842f28b295d4bd152